# talk-compose

./: .travis.yml  Dockerfile  LICENSE  README.md  build  composes.sql  data.sql  migrate.sql  stack.yaml  start-psql  talk-compose.cabal
.github/workflows/: learn-actions.yml
app/: TalkConsumer.hs  TalkWeb.hs
src/: Consumer.hs  Lib.hs  LogParser.hs  Model.hs  WebService.hs
static/: style.css
templates/: compose.hamlet  index.hamlet
tools/: build  make-tag  postgres  start-restart-server
