name:                talk-compose
version:             0.1.2.0
-- synopsis:
-- description:
homepage:            https://pagure.io/talk-compose#readme
license:             BSD3
license-file:        LICENSE
author:              Lubomír Sedlář
maintainer:          lubomir.sedlar@gmail.com
copyright:           2017 Lubomír Sedlář
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Consumer
                     , Lib
                     , WebService
                     , Model
  build-depends:       base >= 4.7 && < 5
                     , zeromq4-haskell
                     , bytestring
                     , time
                     , aeson
                     , text
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , monad-control
                     , monad-logger
                     , unordered-containers
                     , mtl
                     , resourcet
                     , transformers
                     , transformers-base
                     , scotty
                     , warp
                     , data-default-class
                     , wai
                     , wai-extra
  default-language:    Haskell2010

executable talk-compose-consumer
  hs-source-dirs:      app
  main-is:             TalkConsumer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , talk-compose
  default-language:    Haskell2010

executable talk-compose-web
  hs-source-dirs:      app
  main-is:             TalkWeb.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , talk-compose
                     , persistent-postgresql
                     , scotty
                     , persistent
                     , lucid
                     , text
                     , time
                     , authenticate
                     , http-client
                     , http-client-tls
                     , transformers
                     , lifted-base
                     , bytestring
  default-language:    Haskell2010

test-suite talk-compose-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , talk-compose
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://pagure.io/talk-compose
